--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 	<p>El amor como el maquillaje; es importante escoger el indicado</p>
 </header>
 
-<div class="separador1"></div>
 
-<img class="centro" src="img/fotoo.jpg" alt="imagen no encontrada">
-<div class="separador1"></div>
+<center>
+<img  height="300" width="300%"  class="centro" src="img/fotoo.jpg" alt="imagen no encontrada">
+</center>
 
 
 <div class="main"></div>
